--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -15,12 +15,12 @@
     width: 20%;
     border: none;
     border-radius: 4px;
-    position: relative;
+    display: inline-block;
+    position: absolute;
     top: 50%;
+    right: 30px;
     transform: translateY(-50%);
-    margin-right: 30px;
     transition: opacity 0.3s ease;
-    left: auto;
 }
 
 .container .filters button:hover {
